RESOLVED FIXED292032
REGRESSION(294049@main): ASSERTION FAILED: m_cachedCurrentTime in WebCore::AnimationTimelinesController::processPendingAnimations() for animations/resume-after-page-cache.html
https://bugs.webkit.org/show_bug.cgi?id=292032
Summary REGRESSION(294049@main): ASSERTION FAILED: m_cachedCurrentTime in WebCore::An...
Fujii Hironori
Reported 2025-04-24 14:51:40 PDT
Windows port Debug and Release builds are crashing after 294049@main. Regressions: Unexpected crashes (1) animations/resume-after-page-cache.html [ Crash ] ASSERTION FAILED: m_cachedCurrentTime C:\BW\work\build\Source\WebCore\animation/AnimationTimelinesController.cpp(327) : void WebCore::AnimationTimelinesController::processPendingAnimations() 1 00007FF9757ED4AB WebCore::AnimationTimelinesController::processPendingAnimations 2 00007FF9757ECE5B WebCore::AnimationTimelinesController::cacheCurrentTime 3 00007FF9757ED3EE WebCore::AnimationTimelinesController::currentTime 4 00007FF97580704B WebCore::DocumentTimeline::currentTime 5 00007FF975886BED WebCore::WebAnimation::currentTime 6 00007FF97587A356 WebCore::WebAnimation::currentTime 7 00007FF975878905 WebCore::WebAnimation::playState 8 00007FF97588609F WebCore::WebAnimation::setSuspended 9 00007FF9757EBAE8 WebCore::AnimationTimeline::resumeAnimations 10 00007FF975806EE8 WebCore::DocumentTimeline::resumeAnimations 11 00007FF9757ED32A WebCore::AnimationTimelinesController::resumeAnimations 12 00007FF97649B400 WebCore::Document::didBecomeCurrentDocumentInFrame 13 00007FF9774E6F92 WebCore::LocalFrame::setDocument 14 00007FF9772058ED WebCore::FrameLoader::open 15 00007FF976995F49 WebCore::CachedFrame::open 16 00007FF9769977E8 WebCore::CachedPage::restore 17 00007FF977202AE1 WebCore::FrameLoader::commitProvisionalLoad 18 00007FF97720A108 WebCore::FrameLoader::loadProvisionalItemFromCachedPage 19 00007FF9771FFF18 WebCore::FrameLoader::continueLoadAfterNavigationPolicy 20 00007FF977212DCA WebCore::FrameLoader::loadWithDocumentLoader::<lambda_8>::operator() 21 00007FF977212CF5 WTF::Detail::CallableWrapper<`lambda at C:\BW\work\build\Source\WebCore\loader\FrameLoader.cpp:1903:152',void,WebCore::ResourceRequest &&,WTF::WeakPtr<WebCore::FormState,WTF::DefaultWeakPtrImpl,WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> > &&,WebCore::NavigationPolicyDecision>::call 22 00007FF9772AE72C WTF::Function<void (WebCore::ResourceRequest &&, WTF::WeakPtr<WebCore::FormState,WTF::DefaultWeakPtrImpl,WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> > &&, WebCore::NavigationPolicyDecision)>::operator() 23 00007FF9772A9805 WTF::CompletionHandler<void (WebCore::ResourceRequest &&, WTF::WeakPtr<WebCore::FormState,WTF::DefaultWeakPtrImpl,WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> > &&, WebCore::NavigationPolicyDecision)>::operator() 24 00007FF9772A751D WebCore::PolicyChecker::checkNavigationPolicy::<lambda_1>::operator() 25 00007FF9772A6FFF WTF::Detail::CallableWrapper<`lambda at C:\BW\work\build\Source\WebCore\loader\PolicyChecker.cpp:223:43',void,WebCore::PolicyAction>::call 26 00007FF981890A66 WTF::Function<void (WebCore::PolicyAction)>::operator() 27 00007FF98187ADFF WTF::CompletionHandler<void (WebCore::PolicyAction)>::operator() 28 00007FF98289802D WebKit::WebFrame::didReceivePolicyDecision 29 00007FF9827D0503 WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction::<lambda_19>::operator() 30 00007FF9827D047D std::invoke<`lambda at C:\BW\work\build\Source\WebKit\WebProcess\WebCoreSupport\WebFrameLoaderClient.cpp:209:118',WebKit::PolicyDecision> 31 00007FF9827D045A std::_Apply_impl<`lambda at C:\BW\work\build\Source\WebKit\WebProcess\WebCoreSupport\WebFrameLoaderClient.cpp:209:118',std::tuple<WebKit::PolicyDecision>,0> C:\BW\work\build\Source\WebKit\UIProcess/WebProcessProxy.cpp(1317) : virtual void WebKit::WebProcessProxy::didClose(IPC::Connection &) ERROR: 0000017FCAA67040 - [PID=16588] WebProcessProxy::processDidTerminateOrFailedToLaunch: reason=Crash C:\BW\work\build\Source\WebKit\UIProcess/WebProcessProxy.cpp(1332) : void WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch(ProcessTerminationReason) ERROR: 0000017FCAA3F740 - [pageProxyID=388, webPageID=389, PID=16588] WebPageProxy::processDidTerminate: (pid 16588), reason=Crash C:\BW\work\build\Source\WebKit\UIProcess/WebPageProxy.cpp(11047) : void WebKit::WebPageProxy::resetStateAfterProcessTermination(ProcessTerminationReason) ERROR: 0000017FCAA3F740 - [pageProxyID=388, webPageID=389, PID=16588] WebPageProxy::dispatchProcessDidTerminate: reason=Crash C:\BW\work\build\Source\WebKit\UIProcess/WebPageProxy.cpp(11106) : void WebKit::WebPageProxy::dispatchProcessDidTerminate(WebProcessProxy &, ProcessTerminationReason) WebProcess terminated (pid 16588) for reason: crash #CRASHED - WebProcess (pid 16588)
Attachments
Fujii Hironori
Comment 1 2025-04-24 18:55:21 PDT
EWS
Comment 2 2025-04-25 01:16:32 PDT
Committed 294100@main (e3d2dab9323c): <https://commits.webkit.org/294100@main> Reviewed commits have been landed. Closing PR #44500 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-04-25 01:17:13 PDT
Note You need to log in before you can comment on or make changes to this bug.