REGRESSION(294049@main): ASSERTION FAILED: m_cachedCurrentTime in WebCore::AnimationTimelinesController::processPendingAnimations() for animations/resume-after-page-cache.html https://bugs.webkit.org/show_bug.cgi?id=292032

Reviewed by Antoine Quint.

After <https://commits.webkit.org/294049@main>, Windows port was
failing an assertion in processPendingAnimations.
processPendingAnimations should be called only if m_cachedCurrentTime
isn't nullopt.

* LayoutTests/platform/win/TestExpectations:
* Source/WebCore/animation/AnimationTimelinesController.cpp:
(WebCore::AnimationTimelinesController::cacheCurrentTime):

Canonical link: https://commits.webkit.org/294100@main